# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1148 2013/07/01 11:46:21 tomwij Exp $

  01 Jul 2013; Tom Wijsman <TomWij@gentoo.org> gentoo-sources-3.10.0.ebuild:
  Remove BFQ cgroups which compilation broke with 3.10, we need to await its
  author to fix it.

  01 Jul 2013; Tom Wijsman <TomWij@gentoo.org> gentoo-sources-3.10.0.ebuild:
  Bring missing BFQ patches from 3.9 to 3.10 branch.

*gentoo-sources-3.10.0 (01 Jul 2013)

  01 Jul 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.10.0.ebuild:
  Linux version 3.10. Support for namespace user.pax.* on tmpfs. Patch to fix
  brightness control on some thinkpad laptops. Patch for Zero copy for
  infiniband psm userspace driver. Enable mute led for Thinkpad laptops.Patch
  to ensure that /dev/root doesn't appear in /proc/mounts when bootint without
  an initramfs. Bootsplash patch.

*gentoo-sources-3.2.48 (30 Jun 2013)

  30 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.2.48.ebuild:
  Linux patch 3.2.48.

  29 Jun 2013; Andreas K. Huettel <dilfridge@gentoo.org> +ChangeLog-2007,
  +ChangeLog-2012:
  Restore old ChangeLog entries and properly split by year

*gentoo-sources-3.4.51 (27 Jun 2013)
*gentoo-sources-3.0.84 (27 Jun 2013)
*gentoo-sources-3.9.8 (27 Jun 2013)

  27 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.84.ebuild,
  +gentoo-sources-3.4.51.ebuild, +gentoo-sources-3.9.8.ebuild:
  Linux patches 3.0.84, 3.4.51 and 3.9.8.

  22 Jun 2013; Tom Wijsman <TomWij@gentoo.org> gentoo-sources-3.9.7.ebuild:
  Use the genpatches where the patch depth is forced for the BFQ patches that
  failed; no rev bump needed, allowed per ebuild policy. See bug #474008,
  comment 10 and 11.

*gentoo-sources-3.7.10-r1 (22 Jun 2013)

  22 Jun 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.7.10-r1.ebuild,